@@ -13,6 +13,7 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.*;
+import java.util.stream.Collectors;
 
 @Service
 @AllArgsConstructor
@@ -26,7 +27,7 @@ public class TopicService {
     public List<TopicDTOWithArticles> findAllTopics() {
         return topicCustomRepository.findAllTopicsWithArticles().stream()
                 .map(Conversion::convertTopicToDTOWithArticles)
-                .toList();
+                .collect(Collectors.toList());
     }
 
 
